# NotDec-llvm2c

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  ast.c
docs/: StructuralAnalysis.md
docs/solidity-reference/: README.md  control-structures.rst  grammar.rst  units-and-global-variables.rst
docs/solidity-reference/grammar/: SolidityLexer.g4
include/notdec-backends/C/: Backend.h
include/notdec-backends/Core/: ExtValuePtr.h  HType.h  HTypeResult.h  Range.h  StructManager.h  ValueNamer.h
include/notdec-backends/Solidity/: Ast.h  Backend.h  BodyBuilder.h  Printer.h  Reader.h  TypePrinter.h
include/notdec-backends/Solidity/AST/: Nodes.h
include/notdec-backends/Structuring/: GotoManager.h  GotoStructurer.h  LLVMFunctionCFGBuilder.h  MutableRegionGraph.h  PhoenixStructurer.h  RecursiveStructurer.h  Region.h  RegionIdentifier.h  RegionOverlay.h  RegionStructurer.h  SAILRDeoptimization.h  SAILRStructurer.h  StructuredCFG.h  Structurer.h  StructurerRegistry.h  StructuringEvaluator.h  StructuringOptimizationPass.h  StructuringOptimizationPipeline.h  StructuringQuality.h
include/notdec-llvm2c/: ASTManager.h  CCodeTransform.h  CFG.h  Commandlines.def  CompoundConditionBuilder.h  DependencyVisitors.h  Dominators.h  Goto.h  Interface.h  LoopGotoRewriter.h  Phoenix.h  PostOrderCFGView.h  Range.h  StructManager.h  StructuralAnalysis.h  StructuredGoto.h  StructuringContext.h  TypeManager.h  Utils.h  goto.h  interface.h  phoenix.h  structural-analysis.h  utils.h
include/notdec-llvm2c/ASTPrinter/: DeclPrinter.h  StmtPrinter.h  TypePrinter.h
include/notdec-llvm2c/Interface/: ExtValuePtr.h  HType.h  Range.h  StructManager.h  Utils.h  ValueNamer.h
include/notdec-llvm2c/clang/: TreeTransform.h
lib/: CMakeLists.txt
lib/Core/: CMakeLists.txt
lib/Solidity/: BodyBuilder.cpp  CMakeLists.txt  Printer.cpp  Reader.cpp  SolidityBackend.cpp  TypePrinter.cpp
lib/Structuring/: CMakeLists.txt  GotoManager.cpp  GotoStructurer.cpp  LLVMFunctionCFGBuilder.cpp  MutableRegionGraph.cpp  PhoenixStructurer.cpp  RecursiveStructurer.cpp  Region.cpp  RegionIdentifier.cpp  RegionOverlay.cpp  RegionStructurer.cpp  SAILRDeoptimization.cpp  SAILRStructurer.cpp  StructuredCFG.cpp  StructurerRegistry.cpp  StructuringEvaluator.cpp  StructuringOptimizationPass.cpp  StructuringOptimizationPipeline.cpp  StructuringQuality.cpp
lib/notdec-llvm2c/: ASTManager.cpp  CFG.cpp  CMakeLists.txt  CompoundConditionBuilder.cpp  Dominators.cpp  Goto.cpp  Phoenix.cpp  PostOrderCFGView.cpp  Range.cpp  StructManager.cpp  StructuralAnalysis.cpp  StructuredGoto.cpp  StructuringContext.cpp  TypeManager.cpp  Utils.cpp  goto.cpp  phoenix.cpp  structural-analysis.cpp  utils.cpp
lib/notdec-llvm2c/ASTPrinter/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
lib/notdec-llvm2c/Interface/: ExtValuePtr.cpp  HType.cpp  StructManager.cpp  ValueNamer.cpp
scripts/: dump-clang-ast.sh
test/: CMakeLists.txt  phi_demote_htypes_smoke.py  phi_demote_test.cpp
test/rellic/: decompile.sh
test/rellic/decomp/: switch_loop.c
test/structuring/: CMakeLists.txt  run_legacy_phoenix_removed.py  run_sailr_bench2_migration.py  run_shared_structurer_registry.py  run_structured_phoenix_available.py  run_structuring_smoke.py  structuring_analysis_test.cpp
test/structuring/fixtures/: switch_case_recovery.ll  wide_integer_load.ll  wide_negative_integer_literal.ll
test/structuring/source-cases/: manifest.json  run_source_structuring_suite.py
test/structuring/source-cases/cases/: 001_diamond_if_else.c  002_loop_break_continue.c  003_switch_cluster.c  004_tail_merge_return.c  005_nested_loop_switch.c  006_early_return_chain.c  007_nested_loop_break_continue.c  008_guarded_loop_skip.c  009_loop_switch_latch.c  010_loop_two_returns.c  011_tail_early_return.c  012_switch_continue_latch.c  013_loop_switch_shared_latch.c  014_switch_early_return.c  015_switch_shared_return_tail.c  016_nested_loop_break_only.c  017_switch_continue_only_latch.c
test/sysy/: .gitignore  CMakeLists.txt  Makefile
tools/: CMakeLists.txt
tools/notdec-llvm2c/: CMakeLists.txt  notdec-llvm2c.cpp
